# postgres-homeworks

./: pyproject.toml
homework-1/: main.py  settings.py
homework-2/: filter_sorting.sql  groupby.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql
